[package]
name = "fft_rs"
version = "0.1.0"
edition = "2021"
authors=["pranav-avn"]
description = "Radix-2 Fast Fourier Transform Implementation in Rust"
license = "MIT"
repository = "https://github.com/pranav-avn/fft_rs"
keywords = ["fft", "dft", "discrete", "fourier", "transform"]
categories = ["algorithms", "compression", "multimedia::encoding", "science"]
readme = "README.md"

[dependencies]
num = "0.4"